# pnn

./: .gitignore  LICENSE  README.md  load_trained.py  pyproject.toml  requirements.txt  run.py  run_cnn.py  test.py  testing.ipynb  utils.py
src/pnn/: Network.py  losses.py  network.py  networkasd.py  sgd_trainer.py  shape.py  tensor.py  trainer.py
src/pnn/layer/: Activation.py  FullyConnected.py  Softmax.py  activation.py  activationasd.py  convolution.py  flatten.py  fully_connected.py  input.py  input_layer.py  layer.py  loss.py  pooling.py
src/pnn/losses/: cross_entropy.py  mean_squared_error.py
tests/: test_activation.py  test_layer.py  test_losses.py
tests_alt/: test_layer_alternativ.py  test_losses_alternativ.py
