[tool.poetry]
name = "pnn"
version = "0.1.0"
description = "Build a nn from scratch"
authors = ["Michel Bauer <michel.bauer@mainpost.de>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.26.4"
jupyter = "^1.0.0"
mnist = "^0.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
